devops/development/k8s/core-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: core-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            app: core
    template:
        metadata:
            labels:
                app: core
        spec:
            containers:
                - name: core
                  image: bvaibhav95/pacific-core
---
apiVersion: v1
kind: Service
metadata:
    name: core-service
spec:
    type: NodePort
    selector:
        app: core
    ports:
        - name: core
          protocol: TCP
          port: 4000
          targetPort: 4000
          nodePort: 32200
---
apiVersion: v1
kind: Service
metadata:
    name: core-clusterip-service
spec:
    type: ClusterIP
    selector:
        app: core
    ports:
        - name: core
          protocol: TCP
          port: 4000
          targetPort: 4000
