devops/development/k8s/rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq
spec:
  serviceName: rabbitmq
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management-alpine
          volumeMounts:
            - mountPath: "/var/lib/rabbitmq"
              name: rabbitmq-storage
          ports:
            - name: http
              protocol: TCP
              containerPort: 15672
            - name: amqp
              protocol: TCP
              containerPort: 5672
          livenessProbe:
            exec:
              command:
                - "rabbitmq-diagnostics"
                - "ping"
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 15
          readinessProbe:
            exec:
              command:
                - "rabbitmq-diagnostics"
                - "check_port_connectivity"
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 15
      volumes:
        - name: rabbitmq-storage
          persistentVolumeClaim:
            claimName: rabbitmq-persistent-volume-claim
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
spec:
  type: NodePort
  selector:
    app: rabbitmq
  ports:
    - name: rabbitmq
      protocol: TCP
      port: 5672
      targetPort: 5672
      nodePort: 32672
    - name: rabbitmq-http
      protocol: TCP
      port: 15672
      targetPort: 15672
      nodePort: 32673
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: rabbitmq
  ports:
    - name: rabbitmq
      protocol: TCP
      port: 5672
      targetPort: 5672
