devops/development/k8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: redis-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            component: redis
    template:
        metadata:
            labels:
                component: redis
        spec:
            containers:
                - name: redis
                  image: redis:latest
                  ports:
                      - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
    name: redis-service
spec:
    type: NodePort
    selector:
        app: redis
    ports:
        - name: redis
          protocol: TCP
          port: 6379
          targetPort: 6379
          nodePort: 32679
---
apiVersion: v1
kind: Service
metadata:
    name: redis-clusterip-service
spec:
    type: ClusterIP
    selector:
        app: redis
    ports:
        - name: redis
          protocol: TCP
          port: 6379
          targetPort: 6379
