devops/development/k8s/sql-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: sql-server-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            app: sql-server
    template:
        metadata:
            labels:
                app: sql-server
        spec:
            volumes:
                - name: sql-server-storage
                  persistentVolumeClaim:
                      claimName: database-persistent-volume-claim
            containers:
                - name: sql-server
                  image: mcr.microsoft.com/mssql/server
                  volumeMounts:
                      - name: sql-server-storage
                        mountPath: /var/opt/mssql/data
---
apiVersion: v1
kind: Service
metadata:
    name: sql-server-service
spec:
    selector:
        app: sql-server
    type: NodePort
    ports:
        - name: sql-server
          protocol: TCP
          port: 1433
          targetPort: 1433
          nodePort: 31433
---
apiVersion: v1
kind: Service
metadata:
    name: sql-server-clusterip-service
spec:
    selector:
        app: sql-server
    type: ClusterIP
    ports:
        - name: sql-server
          protocol: TCP
          port: 1433
          targetPort: 1433
