devops/development/k8s/user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - name: user
          image: bvaibhav95/pacific-user
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  type: NodePort
  selector:
    app: user
  ports:
    - name: user
      protocol: TCP
      port: 4000
      targetPort: 4000
      nodePort: 32000
---
apiVersion: v1
kind: Service
metadata:
  name: user-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: user
  ports:
    - name: user
      protocol: TCP
      port: 4000
      targetPort: 4000
